--- a/templates/transformations/index.html
+++ b/templates/transformations/index.html
@@ -1,4 +1,4 @@
-
+{% load staticfiles %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -13,12 +13,9 @@
 
     <title>Starter Template for Bootstrap</title>
 
-    <!-- Bootstrap core CSS -->
+    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-
-    <!-- Custom styles for this template -->
-    <link href="#" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'transformations/style.css' %}">
 
    </head>
 
@@ -33,12 +30,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a href="#" class="navbar-left" height><img height=50px class="fit-please" src="{% static 'transformations/images/T_Hub_Logo.jpg' %}"></a>
+          <a class="navbar-brand" href="#">Transformation Inventory</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="#">Transformations</a></li>
+            <li><a href="#about">Files</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -48,11 +46,17 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
+        <h1>Transformation Inventory</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <ul>
+          {% for t in tlist %}
+            <li>{{t}}</li>
+          {% endfor %}
+        </ul>
       </div>
 
-    </div><!-- /.container -->
+    </div>
+    
 
 
     <!-- Bootstrap core JavaScript
@@ -60,8 +64,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <!--<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>-->
   </body>
 </html>
