--- a/templates/transformations/transformation_confirm_delete.html
+++ b/templates/transformations/transformation_confirm_delete.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="panel panel-danger">
-    <div class="panel-heading">Are you sure you want to delete "{{ object }}"?</div>
+    <div class="panel-heading">Are you sure you want to delete <strong>"{{ object }}"</strong>?</div>
     <div class="panel-body">
         <form action="" method="post">
             {% csrf_token %}
