forms loooking better.

--- a/templates/transformations/index.html
+++ b/templates/transformations/index.html
@@ -15,7 +15,7 @@
                     </div>
                {% endfor %}
                
-               <div class="col-md-4 align-bottom btn-group block" style="height:100%">
+               <div class="col-md-4 align-bottom btn-group" style="height:100%">
                     
                     <h5 class="invisible">Buttons</h5> <!-- pushes the buttons down for appearances -->
                     <button class="btn btn-default" type="submit" ><span class="glyphicon glyphicon-filter"></span> Filter</button>
