--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li>
               <p class="navbar-btn"><a href="{% url 'transformation-add' %}" class="btn btn-default">
-                <span class="glyphicon glyphicon-plus-sign fit-please"></span>Add Transformation
+                <span class="glyphicon glyphicon-plus-sign fit-please"></span>New Transformation
               </a></p>
             </li>
             <li><a href="#about">About</a></li>
@@ -66,6 +66,8 @@
       <div class="page-header">
           <h2>{% block header %}Transformation Inventory{% endblock %}</small></h2>
      </div>
+     
+     
 
         {% block content %}
         {% endblock %}
