--- a/templates/transformations/transformation_detail.html
+++ b/templates/transformations/transformation_detail.html
@@ -20,38 +20,49 @@
 {% block content %}
 
      <h3>Details:</h3>
-     
-     <table class="table table-striped align-middle">
-          <tbody>
-          <tr>
-               <th>Category: </th>
-               <td>{{ transformation.get_category_display }}</th>
-          </tr>
-          <tr>
-               <th>Status: </th>
-               <td>{{ transformation.get_status_display }}</td>
-          </tr>
-          <tr>
-               <th>High-Level Description: </th>
-               <td>{{ transformation.description }}</th>
-          </tr>
-          <tr>
-               <th>What problem is it trying to solve? </th>
-               <td>{{ transformation.problem }}</td>
-          </tr>
-                              <tr>
-               <th>Which specific or other organizations are involved? </th>
-               <td>{{ transformation.specific_orgs }}</th>
-          </tr>
-          <tr>
-               <th>Primary Contact: </th>
-               <td>{{ transformation.primary_contact }}</td>
-          </tr>
-          <tr>
-               <th>Tags: </th>
-               <td>{{ transformation.tags.all|join:", " }}</td>
-          </tr>
-          </tbody>
-     </table>
+     <div class="row">
+          <div class="col-md-12">
+               <table class="table table-striped align-middle">
+                    <tr>
+                         <th class="col-md-2">Transformation Title</th>
+                         <td class="col-md-10">{{transformation.title}}</td>
+                    </tr>
+                    <tr>
+                         <th class="col-md-2">Ministry</th>
+                         <td class="col-md-10">{{transformation.ministries_list}}</td>
+                    </tr>
+                    <tr>
+                         <th class="col-md-2">Which specific areas or other organizations are involved?</th>
+                         <td class="col-md-10">{{transformation.specific_orgs}}</td>
+                    </tr>
+                    <tr>
+                         <th class="col-md-2">High-Level Description</th>
+                         <td class="col-md-10">{{transformation.description}}</td>
+                    </tr>                    
+                    <tr>
+                         <th class="col-md-2">Problem</th>
+                         <td class="col-md-10">{{transformation.problem}}</td>
+                    </tr>
+                    <tr>
+                         <th class="col-md-2">Category</th>
+                         <td class="col-md-10">{{transformation.get_category_display}}</td>
+                    </tr>
+                    <tr>
+                         <th class="col-md-2">Status</th>
+                         <td class="col-md-10">{{transformation.get_status_display}}</td>
+                    </tr>
+                    <tr>
+                         <th class="col-md-2">Primary Contact</th>
+                         <td class="col-md-10">{{transformation.primary_contact}}</td>
+                    </tr>
+                    <tr>
+                         <th class="col-md-2">Tags</th>
+                         <td class="col-md-10">{{transformation.tags.all|join:', '}}</td>
+                    </tr>
+
+               </table>
+               
+          </div>
+     </div>
 
 {% endblock %}
