--- a/templates/transformations/transformation_form.html
+++ b/templates/transformations/transformation_form.html
@@ -1,13 +1,50 @@
 {% extends "base.html" %}
-{% load crispy_forms_tags %}
+{% load widget_tweaks %}
 
-{% block title %}Add Transformation{% endblock %}
-{% block header %}Add Transformation{% endblock %}
+{% block title %}Add/Edit Transformation{% endblock %}
+{% block header %}Add/Edit Transformation{% endblock %}
 
 {% block content %}
-     <form method="POST" action="" class="form-horizontal">
-          {% csrf_token %}
-          {{ form|crispy }}
-          <button type="submit" class="btn btn-success block">Add Transformation</button>
-     </form>
+
+     <form method="POST" action="" class="form-group form-horizontal">
+     {% csrf_token %}
+     
+     <div class="row">
+          
+          <div class="row">
+               <div class="col-md-12">
+                    
+                    <table class="table table-striped align-middle">
+                         {% for field in form %}
+                         <tr>
+                              <th class="col-md-2">
+                                   {{field.label}}
+                                   {% if field.help_text %}
+                                        <br/><span class="small info">{{field.help_text }}</span>
+                                   {% endif %}
+                              </th>
+                              <td class="col-md-10">
+                                   {% if field.errors %}
+                                        {{ field.errors }}
+                                   {% endif %}
+                                   {{field|add_class:"form-control"}}
+                              </td>
+                         </tr>
+                         {% endfor %}
+                    </table>
+                    
+               </div>
+          </div>
+               
+
+     <div class="row">
+          <div class="col-md-4 col-md-offset-4 btn-group">
+               <button type="submit" class="btn btn-success btn-lg">Submit</button>
+               </form>
+               <form method="GET" action="{% url 'index' %}">
+                    <button type="cancel" class="btn btn-default btn-lg">Cancel</button>
+               </form>
+          </div>
+     </div>
+               
 {% endblock %}
