--- a/templates/transformations/index.html
+++ b/templates/transformations/index.html
@@ -15,23 +15,26 @@
                     </div>
                {% endfor %}
                
-               <div class="col-md-4 align-bottom btn-group" style="height:100%">
+               <div class="col-md-2 col-md-offset-2 align-bottom btn-group block">
                     
                     <h5 class="invisible">Buttons</h5> <!-- pushes the buttons down for appearances -->
                     <button class="btn btn-default" type="submit" ><span class="glyphicon glyphicon-filter"></span> Filter</button>
                     </form> <!-- end the first form here -->
                     
-                    <form action="" method="GET"> <!-- second form to indicate the form should be cleared -->
+                    <!-- second form to indicate the form should be cleared -->
+                    <form action="" method="GET"> 
                          <button class="btn btn-default" value="Clear" type="submit">
                          <span class="glyphicon glyphicon-sunglasses"></span> Clear</button>
                     </form>
-                    
+              
                </div>
+               
           
      </div>
      
-     <div class="table-responsive">
-          <table class="table table-striped table-hover align-middle">
+     <div class="row">
+     
+          <table class="table table-striped table-hover table-responsive align-middle col-md-12">
                <tbody>
                <tr>
                     <th>Ministry</th>
