--- a/templates/transformations/transformation_detail.html
+++ b/templates/transformations/transformation_detail.html
@@ -8,10 +8,7 @@
      {{transformation.title}}<small> ({{ transformation.ministry.all|join:", " }})</small>
      
      <div class="pull-right">
-          <a class="btn btn-default" href="{% url 'transformation-edit' transformation.pk %}" data-toggle="tooltip" title="Edit">
-               <span class="glyphicon glyphicon-pencil"></span>
-          </a>
-          <a class="btn btn-default" href="{% url 'transformation-delete' transformation.pk %}" data-toggle="tooltip" title="Delete">
+          <a class="btn btn-default" href="{% url 'transformation-delete' transformation.pk %}" data-toggle="tooltip" title="Delete Transformation">
                <span class="glyphicon glyphicon-trash"></span>
           </a>
      </div>
@@ -19,9 +16,18 @@
 
 {% block content %}
 
-     <h3>Details:</h3>
      <div class="row">
-          <div class="col-md-12">
+          <div class="col-md-8">
+               <h3>Details:
+               
+                    <div class="pull-right">
+                         <a class="btn btn-default" href="{% url 'transformation-edit' transformation.pk %}" data-toggle="tooltip" title="Edit Details">
+                              <span class="glyphicon glyphicon-pencil"></span>
+                         </a>
+                    </div>
+                    
+               </h3>
+               
                <table class="table table-striped align-middle">
                     <tr>
                          <th class="col-md-2">Transformation Title</th>
@@ -32,7 +38,7 @@
                          <td class="col-md-10">{{transformation.ministries_list}}</td>
                     </tr>
                     <tr>
-                         <th class="col-md-2">Which specific areas or other organizations are involved?</th>
+                         <th class="col-md-2">Specific Areas & Other Orgs</th>
                          <td class="col-md-10">{{transformation.specific_orgs}}</td>
                     </tr>
                     <tr>
@@ -61,6 +67,55 @@
                     </tr>
 
                </table>
+               
+          </div>
+          
+          <div class="col-md-4">
+               <h3>Files and Links:
+               
+                    <div class="pull-right">
+                         <a class="btn btn-default" href="{% url 'add-link' transformation.pk %}" data-toggle="tooltip" title="Add Link">
+                              <span class="glyphicon glyphicon-link"></span>
+                         </a>
+                         <a class="btn btn-default" href="{% url 'add-file' transformation.pk %}" data-toggle="tooltip" title="Add Attachment">
+                              <span class="glyphicon glyphicon-file"></span>
+                         </a>
+                    </div>
+
+               </h3>
+               
+               {% if transformation.resources %}
+               
+               <table class="table table-striped align-middle table-hover">
+                    {% for resource in transformation.resources %}
+                    <tr>
+                         <td class="col=md-1">
+                              {% if resource.type = 'Link' %}
+                                   <span class="glyphicon glyphicon-link large"></span>
+                                   </td>
+                                   <td>
+                                   <a href="{% url 'view-link' resource.pk %}">
+                                        <span class="strong">{{resource.title}}</span>
+                                   </a>
+                              {% endif %}
+                              {% if resource.type = 'File' %}
+                                   <span class="glyphicon glyphicon-file"></span>
+                                   </td>
+                                   <td>
+                                   <a href="{% url 'view-file' resource.pk %}">
+                                        <span class="strong">{{resource.title}}</span>
+                                   </a>
+                              {% endif %}
+                              <br/>
+                              <span class="small">{{resource.description}}</span>
+                         </td>
+                    </tr>
+                    {% endfor %}
+               </table>
+               {% else %}
+               <br/>
+               <p class="well">There are no resources attached to this transformation yet. Add some above.</p>
+               {% endif %}
                
           </div>
      </div>
